# Helperino

./: .gitignore  LICENSE  README.md
lab2/: CMakeLists.txt
lab2/include/: GCD.h  Log2.h  Sum.h
lab2/src/: GCD.c  Log2.c  Sum.c  main.c
lab2/tests/: GCD.Tests.cpp  Log2.Tests.cpp  Sum.Tests.cpp
